--- a/styles/main.scss
+++ b/styles/main.scss
@@ -46,6 +46,10 @@ h2 {
     line-height: 32px;
 }
 
+.cursorPointer:hover{
+    cursor: pointer;
+}
+
 header {
     height: 700px;
     background-image: url(img/Bitmap.png);
@@ -90,7 +94,11 @@ header {
                 font-family: $main-font;
                 letter-spacing: 0.5px;
                 color: $main-color;
+                
             }
+        }
+        &__Button:hover{
+            cursor: pointer;
         }
     }
 
