--- a/styles/main.css
+++ b/styles/main.css
@@ -97,9 +97,6 @@ header .blockTitle__Button_redButton {
   letter-spacing: 0.5px;
   color: #FFFFFF;
 }
-header .blockTitle__Button:hover {
-  cursor: pointer;
-}
 header .blockWithLogo {
   width: 100%;
   height: 36px;
@@ -125,9 +122,9 @@ header .blockWithLogo__autirization {
   font-family: "Montserrat-Regular";
   margin-right: 40px;
 }
-header .blockWithLogo__autirization input {
-  width: 82px;
-  height: 30px;
+header .blockWithLogo__autirization button {
+  width: 90px;
+  height: 36px;
   border: 2px solid #FFFFFF;
   background-color: transparent;
   border-radius: 40px;
